[package]
name = "yfa-quotes"
version = "0.1.8"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.0"
yahoo_finance_api = "1.2"
chrono = "0.4"
reqwest = { version = "0.11", features = ["blocking"] }
tokio-test = "0.4.2"
